# qmailadmin

./: qmailadmin.spec
autorespond/: ChangeLog  README  autorespond.c
qmailadmin/: BUGS  CHANGELOG  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.hooks  TODO  TRANSLATORS  acconfig.h  aclocal.m4  alias.c  alias.h  auth.c  auth.h  autorespond.c  autorespond.h  cgi.c  cgi.h  command.c  command.h  config.h.in  configure  configure.ac  configure.in  dotqmail.c  dotqmail.h  forward.c  forward.h  html.h  limits.c  limits.h  mailinglist.c  mailinglist.h  mkinstalldirs  mymailboxes.c  mymailboxes.h  printh.c  printh.h  (+11 more)
qmailadmin/contrib/: alias2forward.pl
qmailadmin/html/: README  add_autorespond.html  add_forward.html  add_listdig.html  add_listmod.html  add_listuser.html  add_mailinglist-idx.html  add_mailinglist-no-idx.html  add_mymailbox.html  add_user.html  del_autorespond_confirm.html  del_forward_confirm.html  del_listdig.html  del_listmod.html  del_listuser.html  del_mailinglist_confirm.html  del_mymailbox.html  del_user_confirm.html  footer.html  header.html  main_menu.html  menu_user.html  mod_autorespond.html  mod_autorespond_line.html  mod_dotqmail.html  mod_dotqmail_line.html  mod_mailinglist-idx.html  mod_mymailbox.html  mod_user.html  setremotecatchall.html  show_autorespond.html  show_autorespond_line.html  show_counts_line.html  show_digest_subscribers.html  show_error_line.html  show_forwards.html  show_forwards_line.html  show_login.html  show_mailinglist.html  show_mailinglist_line.html  (+8 more)
qmailadmin/lang/: bg  da  de  en  es  fi  fr  hu  it  ja  lt  nl  no  pl  pt-BR  ru  sk  sv  tr
